tests/ui/symbol-names/impl2.stderr
error: def-path(<[u8; 1 + 2] as Foo>::baz)
  --> $DIR/impl2.rs:11:5
   |
LL |     #[rustc_def_path]
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

